add contribution handling and update GUI for financial entries

--- a/config.json
+++ b/config.json
@@ -9,5 +9,13 @@
         "Sukino",
         "Narayana Hospital",
         "Miscellaneous"
+    ],
+
+    "contribution_heads": [
+        "Appa",
+        "X",
+        "Y",
+        "Z"
     ]
+
 }
