add inflow source selection to GUI and update configuration for inflow heads

--- a/config.json
+++ b/config.json
@@ -11,6 +11,13 @@
         "Miscellaneous"
     ],
 
+    "inflow_heads": [
+        "Appa",
+        "X",
+        "Y",
+        "Z"
+    ],
+
     "contribution_heads": [
         "Appa",
         "X",
